tests/ui/crossed_streams.stderr
error[E0597]: `tag` does not live long enough
 --> $DIR/crossed_streams.rs:5:5
  |
5 |     make_guard!(b);
  |     ^^^^^^^^^^^^^^^ borrowed value does not live long enough
6 |     dbg!(a == b); // ERROR (here == is a static check)
7 | }
  | -
  | |
  | `tag` dropped here while still borrowed
  | borrow might be used here, when `_guard` is dropped and runs the `Drop` code for type `main::make_guard`
  |
  = note: values in a scope are dropped in the opposite order they are defined
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

For more information about this error, try `rustc --explain E0597`.
